<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#7093c7">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/challenge_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:onClick="backToMainMenu" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Add Challenges"
            android:id="@+id/addchallenges" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Challenge Statement:"
            android:id="@+id/challengeStatement" />
        <EditText
            android:id="@+id/challenge_statement"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:gravity="top">
        </EditText>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_note"
            android:id="@+id/challengeNote" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Upload Media File"
            android:id="@+id/media_file_text" />
        <Button
            android:id="@+id/media_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_media_file"
            android:onClick="selectMediaFile" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ext_resource_text"
            android:id="@+id/externalResourceUrl" />
        <EditText
            android:id="@+id/external_resource_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:gravity="top">
        </EditText>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/runtime_widgets_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_score"
            android:id="@+id/challengeScoreText" />
        <EditText
            android:id="@+id/challenge_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="number" >
        </EditText>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/negative_score_text"
            android:id="@+id/negativeScoreText" />
        <EditText
            android:id="@+id/negative_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="number" >
        </EditText>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_quality_text"
            android:id="@+id/challengeQualityText" />
        <Spinner
            android:id="@+id/challenge_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/challenge_qualities"
            android:spinnerMode="dropdown" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/compulsory_challenge_text"
            android:id="@+id/compulsoryChallengeText" />
        <CheckBox
            android:id="@+id/compulsory_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_time_limit"
            android:id="@+id/maxTimeLimitText" />
        <EditText
            android:id="@+id/max_time_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="top">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_add_challenge"
                android:onClick="addChallenge" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_close_button"
                android:onClick="saveClose" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_button"
                android:onClick="closeScreen" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:onClick="backToMainMenu" />
            </LinearLayout>
    </LinearLayout>
</ScrollView>
